
        CHANGES IN spatstat.explore VERSION 2.999-999.013

OVERVIEW

    o New package

    o Package will be initialised at version 3.0-0.
      Versions less than 3 are developmental.

    o We thank Marie-Colette van Lieshout for contributions.
    
    o Periodic edge correction for K function.

    o Changed denominator in pair correlation function.
    
    o Bandwidth selection for adaptive kernel estimation of intensity.

    o Minor improvements.

NEW FUNCTIONS

    o bw.CvL.adaptive
    Bandwidth selection for adaptive kernel estimation of intensity.
    
SIGNIFICANT USER-VISIBLE CHANGES

    o Package structure
    The package 'spatstat.core' has been split into two packages called
    'spatstat.explore' (for exploratory data analysis)
    and 'spatstat.model' (for modelling and formal inference).

    o spatstat.explore
    The new package 'spatstat.explore' contains the code for
    exploratory data analysis and nonparametric analysis
    of spatial data. Examples include 'density.ppp', 'Kest',
    'envelope', 'rhohat', 'clarkevans.test'.

    o NEWS
    The NEWS file for the new package 'spatstat.explore'
    contains older news items from the defunct package 'spatstat.core'
    (for functions which are now in 'spatstat.explore').

    o Kest, Kdot, Kcross, Ldot, Lcross, Kmulti
    These functions now accept the option 'correction="periodic"'
    to compute the periodic (toroidal) edge correction estimate.

    o pcf
    When ratio=TRUE, the denominator is now equal to the number of pairs of
    points considered. This does not affect the estimate of the pair
    correlation function, but it changes the calculation of pooled estimates.
    
    o Ksector
    When ratio=TRUE, the denominator is now equal to the number of pairs of
    points considered. This does not affect the estimate of the summary
    function, but it changes the calculation of pooled estimates.
    
    o markcorr, markcrosscorr