@@ -1,3 +1,3 @@
 date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
-"2022-06-27" "2.999-999.013" 225 505 0 30451 6183
+"2022-06-29" "2.999-999.014" 225 505 0 30458 6183
